[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-wrapper"
version = "0.4.0"
description = "OpenAI-compatible API server backed by the `claude` CLI (Claude Code)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.scripts]
claude-code = "claude_code.cli:main"

[tool.setuptools.packages.find]
include = ["claude_code*"]
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-wrapper"
version = "0.3.0"
description = "Browser-automated wrapper that turns your Claude Pro web account into a local API with agentic tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "playwright>=1.40",
    "pyperclip>=1.8",
]

[project.scripts]
claude-code = "claude_code.cli:main"
